--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: sharx
 Type: Package
 Title: Models and Data Sets for the Study of Species-Area Relationships
-Version: 1.0-0
-Date: 2010-12-06
+Version: 1.0-3
+Date: 2012-08-09
 Author: Peter Solymos
 Maintainer: Peter Solymos <solymos@ualberta.ca>
 Description: Data sets and SAR, SARX, HSAR and HSARX models as
-        described in Solymos and Lele (in press).
-Depends: Formula, dclone
+        described in Solymos and Lele (2012, GEB 21, 109-120).
+Depends: methods, stats4, Formula, dcmle, dclone
+SystemRequirements: jags (>= 1.0.3)
+URL: http://dcr.r-forge.r-project.org/
 License: GPL-2
 LazyLoad: yes
+LazyData: true
+Packaged: 2012-08-09 18:07:34 UTC; Peter
 Repository: CRAN
-Repository/R-Forge/Project: dcr
-Repository/R-Forge/Revision: 418
-Date/Publication: 2010-12-09 20:32:59
-Packaged: 2010-12-06 22:08:31 UTC; rforge
+Date/Publication: 2012-08-09 18:54:21
